<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:padding="10dp">

    <org.opencv.android.JavaCameraView
        android:id="@+id/jcv_camera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl_control"
        app:layout_constraintVertical_weight=".4"
        android:layout_margin="4dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_control"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/jcv_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight=".6">

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cl_buttons"
            app:layout_constraintVertical_weight=".3"
            android:gravity="center"
            android:background="@drawable/inset_background_grey"
            android:textColor="#FFFFFF"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_instruction"
            app:layout_constraintBottom_toTopOf="@+id/cl_user"
            app:layout_constraintVertical_weight=".4">

            <Button
                android:id="@+id/b_register"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/b_delete"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/b_verify"
                android:text="@string/b_register"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_grey"/>

            <Button
                android:id="@+id/b_verify"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/b_cancel"
                app:layout_constraintLeft_toRightOf="@+id/b_register"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/b_verify"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_grey"/>

            <Button
                android:id="@+id/b_delete"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/b_register"
                app:layout_constraintBottom_toTopOf="@+id/b_save"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/b_cancel"
                android:text="@string/b_delete"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_red"/>

            <Button
                android:id="@+id/b_cancel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/b_verify"
                app:layout_constraintBottom_toTopOf="@+id/b_settings"
                app:layout_constraintLeft_toRightOf="@+id/b_delete"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/b_cancel"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_yellow"/>

            <Button
                android:id="@+id/b_save"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/b_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/b_settings"
                android:text="@string/b_save"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_green"/>

            <Button
                android:id="@+id/b_settings"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/b_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/b_save"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/b_settings"
                android:textColor="#FFFFFF"
                android:background="@drawable/inset_background_blue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_user"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cl_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight=".3">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>